[package]
name = "prototest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tonic = "0.11.0"
prost = "0.12.3"
async-stream = "0.3.5"

[build-dependencies]
tonic-build = "0.11.0"
